mule-user-guide/v/3.5/batch-processing-reference.adoc
= 批处理参考

*Enterprise, CloudHub*

*<<Example>>*

== 术语

[cols="34,33,33"]
|===
| *Term*  | *Description*  | *Element*
| *Batch*  | Mule独立处理的一组记录。 | n / a
| *Batch Commit*  |将记录累积为块以将大量插入操作准备到外部源或服务的范围。 | `batch:commit`
| *Batch Job*  | Mule将消息负载处理为一批记录的应用程序中的顶层元素。术语批处理作业包括处理的所有四个阶段：输入，加载和分派，处理和完成。 | `batch:job`
| *Batch Job Instance*  |在Mule流程中执行批处理作业而产生的Mule应用程序中的一个事件。 Mule在Load和Dispatch阶段创建批处理作业实例，并且该实例永远存在。 | n / a
| *Batch Job Result*  | POJO包含有关批处理作业实例的处理结果的信息。您可以使用它获取有关执行进度的信息。 | `BatchJobResult`
| *Batch Message Processor*  | Mule流中的一个元素，用于触发批处理作业的执行。 | `batch:execute`
| *Batch Phase*  |随着Mule处理它们，批次经过的顺序排序阶段。 | `batch:input` +
  `batch:process-records` +
  `batch:on-complete`
| *Batch Step*  |批处理作业的子元素，多个消息处理器在批处理中对记录进行操作。 | `batch:step`
| *Record*  |大消息负载的一小部分;一个Mule的动作结果的单个实例，用于将序列化的消息有效载荷（即集合或数组）分割为多个部分进行处理。 | n / a
|===

== 批元素

[%header,cols="34,33,33"]
|===
| Studio调色板 | XML编辑器 |使用
| *Batch*  | `batch:job`  |定义批次"flow"。
| *Batch Commit*  | `batch:commit`  |将记录堆积成块，以便将批量插入操作准备到外部源或服务。
| *Batch Reference*  | `batch:execute`  |在Mule流中设置，触发批处理作业的开始。
| *Batch Threading Profile*  | `batch:threading-profile`  |配置有关Mule处理批处理作业的线程的详细信息。
| *Record Variable*  | `batch:record-variable-transformer`  |设置或删除记录上的`recordVars`。在批处理阶段内的批处理步骤中仅有效_only_。
|===

== 元素和属性

[%header%autowidth.spread]
|===
|元素 |属性 |值 |属性需求 |属性描述
| *batch:commit*  | `doc:name`  |消息处理器的唯一标识符 | x  |为批量提交包装器定义唯一标识符。
定义在向外部源或服务启动upsert块记录之前要收集的记录数。| | `size`  |整数 | x {{5}
|===

[%header%autowidth.spread]
|===
|元素 |属性 |值 |属性需求 |属性描述
| *batch:execute*  | `name`  |批处理作业名称 | x  |标识要执行的批处理作业。
|  | `doc:name`  |消息处理器的唯一名称 | x  | 为批处理参考消息处理器定义唯一标识符;可以是一个表达。
|===

[%header%autowidth.spread]
|===
|元素 |属性 |值 |属性需求 |属性描述
| *batch:input*  | `none`  | N / A  |   | N / A
|===

[%header,cols="5*"]
|===
|元素 |属性 |值 |属性需求 |属性描述
作业的| *batch:job*  | `name`  |唯一名称 | x  |为作业定义唯一标识符。
|   | `max-failed-records`  | `0` +
  `-1` +
其他整数  |   | 0 =不容忍失败，立即停止批处理。 +
-1 =容忍所有失败，从不停止处理，因为失败的记录。 +
整数=定义在停止处理之前批量允许的最大失败记录数。
|===

[%header%autowidth.spread]
|===
|元素 |属性 |值 |属性需求 |属性描述
| *batch:on-complete*  | `none`  | N / A  |   | N / A
|===

[%header%autowidth.spread]
|===
|元素 |属性 |值 |属性需求 |属性描述
| *batch:process-records*  | `none`  | N / A  |   | N / A
|===

[%header%autowidth.spread]
|===
|元素 |属性 |值 |属性需求 |属性描述
| *batch:remove-record-variable-transformer*  | `doc:name`  |消息处理器的唯一标识符 | x  |为批处理参考消息处理器定义唯一标识符。
记录级变量 |  |的|  | `variableName`  |名称标识要删除的记录级变量。
|===

[%header%autowidth.spread]
|====
|元素 |属性 |值 |属性需求 |属性描述
| *batch:set-record-variable-transformer*  | `doc:name`  |消息处理器的唯一标识符 | x  |为批处理参考消息处理器定义唯一标识符。
| | `value`  | MEL表达式 | x  |定义命名变量的值。
记录级变量的|   | `variableName`  |名称 | x  |为记录级变量定义唯一名称。
|====

[%header%autowidth.spread]
|===
|元素 |属性 |值 |属性需求 |属性描述
| *batch:step*  | `name`  |步骤的唯一名称 | x  |为批处理作业内的步骤定义唯一标识符。
|   | `accept-policy`  | ALL +
FAILURES_ONLY +
NO_FAILURES   |   | ALL =步骤处理所有记录，失败并成功。 +
  FAILURES_ONLY =步骤仅处理上一步中失败的记录。 +
  NO_FAILURES =步骤仅处理在前面所有步骤中成功的记录。
MEL表达式 |   |步骤仅处理那些相对于表达式而言评估为true的记录（评估为假=跳过记录）。
|===

[%header,cols="5*"]
|====
|元素 |属性 |值 |属性需求 |属性描述
| *batch:threading-profile*  | `poolExhaustedAction`  |等待+
WAIT +
DISCARD +
DISCARD_OLDEST +
ABORT +
RUN   |   |定义在所有线程处于活动状态时批量作业应该执行的操作。 +
  WAIT =（_Default_）等到下一个线程可用为止
  DISCARD =放弃等待批处理作业+
  DISCARD_OLDEST =放弃最旧的等待批处理作业+
  ABORT =中止处理批处理作业+
  RUN =不等待线程变为可用，同步运行批处理作业
|   | `maxThreadsActive`  |整数 |   |定义Mule处理批处理作业的最大活动线程数。 +
|   | `maxThreadsIdle`  |整数 |   |定义Mule处理批处理作业的最小活动线程数。
|   | `threadTTL`  |整数 |   |以毫秒为单位定义线程应处于活动状态并保持空闲状态的时间。
|   | `threadWaitTimeout`  |整数 |   |定义在超时之前批处理作业应该等待线程变得可用的时间。
|  | `maxBufferSize`  |整数 |   |定义在等待线程变得可用。
|====

== 批量提交连接器

有几个**Anypoint Connectors**有能力处理记录级别的错误，而不会失败整个批量提交（即upsert）。在运行时，这些连接器会跟踪哪些记录被目标资源成功接受，哪些记录无法插入。因此，连接器不是在提交活动期间失败一组完整的记录，而是简单地插入尽可能多的记录，并跟踪任何通知失败。下面简要介绍一下这种连接器的情况：

* 的Salesforce
Google通讯录* 
Google日历。* 
* 的NetSuite

== 批处理结果处理统计

[cols="2*"]
|====
| *Statistic*  | *Description*
| `batchJobInstanceId`  |指示已执行作业实例的ID的字符串。
| `elapsedTimeInMillis`  |指示批处理作业在执行状态中花费的毫秒数。
| `failedOnCompletePhase`  |一个布尔值，表示在整个阶段是否发现异常。
| `failedOnInputPhase`  |指示在输入阶段是否发现异常的布尔值。
| `failedOnLoadingPhase`  |指示在输入阶段是否发现异常的布尔值。
| `failedRecords`  |长表示处理失败的记录数。
| `inputPhaseException`  |如果在输入阶段发现异常，则返回该异常;否则返回`null`。请注意，此统计信息与failedOnInputPhase之间存在关联。
| `loadedRecords`  |长整指示到目前为止加载的记录数。加载阶段完成后，它应该等于totalRecords。
| `loadingPhaseException`  |如果在加载阶段发现异常，则返回该异常;否则返回`null`。请注意，此统计信息与failedOnLoadingPhase之间存在关联。
| `onCompletePhaseException`  |如果在完整阶段发现异常，则返回该异常;否则返回`null`。请注意，此统计信息与failedOnCompletePhase之间存在关联。
| `processedRecords`  |长，表示到目前为止处理的记录数。它等于成功记录+失败记录，但如果作业没有完成，它可能会低于总记录。
| `successfulRecords`  |长，表示到目前为止处理的记录数。
| `totalRecords`  |批次中的记录总数。
|====


== 使用MEL进行批处理

详细了解如何在应用程序中使用 link:/mule-user-guide/v/3.5/mule-expression-language-mel[骡子表达语言（MEL）]。

[%header%autowidth.spread]
|===
|变量或函数	|描述
| `recordVars` 	|用于通过名称访问记录变量。
| `isSuccessfulRecord()`  |指示记录处理状态的布尔函数。
| `isFailedRecord()`  |指示记录处理状态的布尔函数。
| `failureExceptionForStep` 	|返回指示处理失败的步骤的异常。
| `totalRecords`  |批次中的记录总数。
| `loadedRecords`  |在加载阶段加载的记录数。
| `processedRecords`  |此时处理的记录数。
| `failedRecords`  |至少在一个步骤中处理并失败的记录数。
批作业实例的| `batchJobInstanceId`  | ID
| `failedOnInputPhase`  |布尔函数，指示在输入阶段批处理是否失败。
| `inputPhaseException`  |输入阶段的例外对象。
| `failedOnLoadingPhase`  |布尔函数，指示在加载阶段批处理是否失败。
| `loadingPhaseException`  |加载阶段中的异常的异常对象。
| `failedOnCompletePhase`  |指示批处理是否在完成阶段失败的布尔函数。
| `completePhaseException`  |完成阶段中的例外对象。
|===

== 示例

[TIP]
 对于批处理作业在处理的每个阶段中采用的示例和步骤的*full description*，请参阅 link:/mule-user-guide/v/3.6/batch-processing[批量处理]。

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
image:example_batch.png[example_batch]
....
[tab,title="XML Editor"]
....
[TIP]
====
If you copy + paste the code into your instance of Studio, be sure to enter your own values for the the *global Salesforce connector*: +

* username
* password
* security token
 +
 How do I get a Salesforce security token?

. Log in to your Salesforce account. From your account menu (your account is labeled with your name), select *Setup*.
. In the left navigation bar, under the *My Settings* heading, click to expand the **Personal **folder. 
. Click *Reset My Security Token*. Salesforce resets the token and emails you the new one.
. Access the email that Salesforce sent and copy the new token onto your local clipboard.
. In the application in your instance of Anypoint Studio, click the *Global Elements* tab. 
. Double-click the Salesforce global element to open its *Global Element Properties* panel. In the *Security Token* field, paste the new Salesforce token you copied from the email. Alternatively, configure the global element in the XML Editor.
====

[source, xml, linenums]
----
<mule xmlns:batch="http://www.mulesoft.org/schema/mule/batch" xmlns:data-mapper="http://www.mulesoft.org/schema/mule/ee/data-mapper" xmlns:sfdc="http://www.mulesoft.org/schema/mule/sfdc" xmlns:file="http://www.mulesoft.org/schema/mule/file" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.5.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
 
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
 
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
 
http://www.mulesoft.org/schema/mule/batch http://www.mulesoft.org/schema/mule/batch/current/mule-batch.xsd
 
http://www.mulesoft.org/schema/mule/ee/data-mapper http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd
 
http://www.mulesoft.org/schema/mule/sfdc http://www.mulesoft.org/schema/mule/sfdc/current/mule-sfdc.xsd">
 
    <sfdc:config name="Salesforce" username="username" password="password" securityToken="SpBdsf98af9tTR3m3YVcm4Y5q0y0R" doc:name="Salesforce">
        <sfdc:connection-pooling-profile initialisationPolicy="INITIALISE_ONE" exhaustedAction="WHEN_EXHAUSTED_GROW"/>
    </sfdc:config>
 
    <data-mapper:config name="new_mapping_grf" transformationGraphPath="new_mapping.grf" doc:name="DataMapper"/>
 
    <data-mapper:config name="new_mapping_1_grf" transformationGraphPath="new_mapping_1.grf" doc:name="DataMapper"/>
 
    <data-mapper:config name="leads_grf" transformationGraphPath="leads.grf" doc:name="DataMapper"/>
 
    <data-mapper:config name="csv_to_lead_grf" transformationGraphPath="csv-to-lead.grf" doc:name="DataMapper"/>
 
    <batch:job max-failed-records="1000" name="Create Leads" doc:name="Create Leads">
        <batch:threading-profile poolExhaustedAction="WAIT"/>
        <batch:input>
            <file:inbound-endpoint path="src/test/resources/input" moveToDirectory="src/test/resources/output" responseTimeout="10000" doc:name="File"/>
            <data-mapper:transform config-ref="csv_to_lead_grf" doc:name="CSV to Lead"/>
        </batch:input>
 
        <batch:process-records>
            <batch:step name="lead-check" doc:name="Lead Check">
                <enricher source="#[payload.size() &gt; 0]" target="#[recordVars['exists']]" doc:name="Message Enricher">
                    <sfdc:query config-ref="Salesforce" query="dsql:SELECT Id FROM Lead WHERE Email = '#[payload[&quot;Email&quot;]]'" doc:name="Find Lead"/>
                </enricher>
            </batch:step>
            <batch:step name="insert-lead"  doc:name="Insert Lead" accept-expression="#[recordVars['exists']]">
                <logger message="Got Record #[payload], it exists #[recordVars['exists']]" level="INFO" doc:name="Logger"/>
                <batch:commit size="200" doc:name="Batch Commit">
                    <sfdc:create config-ref="Salesforce" type="Lead" doc:name="Insert Lead">
                        <sfdc:objects ref="#[payload]"/>
                    </sfdc:create>
                </batch:commit>
            </batch:step>
            <batch:step name="log-failures" accept-policy="ONLY_FAILURES" doc:name="Log Failures">
                <logger message="Got Failure #[payload]" level="INFO" doc:name="Log Failure"/>
            </batch:step>
        </batch:process-records>
 
        <batch:on-complete>
            <logger message="#[payload.loadedRecords] Loaded Records #[payload.failedRecords] Failed Records" level="INFO" doc:name="Log Results"/>
        </batch:on-complete>
    </batch:job>
</mule>
----
....
------

== 另请参阅

* 在批处理中了解关于 link:/mule-user-guide/v/3.6/batch-filters-and-batch-commit[过滤器]的更多信息。
* 详细了解 link:/mule-user-guide/v/3.6/batch-filters-and-batch-commit[批提交]。
* 详细了解如何设置和删除 link:/mule-user-guide/v/3.6/record-variable[记录级变量]。
* 查看Mule中批处理的 link:/mule-user-guide/v/3.6/batch-processing[基本的解剖学]。
